[gd_scene load_steps=4 format=3 uid="uid://dwhxmuw6skfib"]

[ext_resource type="Script" uid="uid://bl4kjqqat2pgr" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://25by1fe6yskx" path="res://Player/Player.tscn" id="1_ig7tw"]
[ext_resource type="AudioStream" uid="uid://b3ieqm71fei05" path="res://Assets/8-bit-pixel-fight.mp3" id="3_h2yge"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="TimeLabel" type="Label" parent="."]
offset_left = 184.0
offset_top = -158.0
offset_right = 224.0
offset_bottom = -135.0

[node name="Start Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="Start Panel"]
layout_mode = 0
offset_left = -33.0
offset_top = -157.0
offset_right = 35.0
offset_bottom = -134.0
text = "VP Clone"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Start Panel"]
layout_mode = 0
offset_left = -23.0
offset_top = 105.0
offset_right = 23.0
offset_bottom = 136.0
text = "Start"

[node name="BestTimeLabel" type="Label" parent="Start Panel"]
layout_mode = 0
offset_left = -80.0
offset_top = 137.0
offset_right = 80.0
offset_bottom = 160.0
text = "Melhor tempo: 00:00"

[node name="GameOver Panel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="RetryButton" type="Button" parent="GameOver Panel"]
layout_mode = 0
offset_left = -63.0
offset_top = 121.0
offset_right = 65.0
offset_bottom = 152.0
text = "Tentar de Novo"

[node name="TimeLabel" type="Label" parent="GameOver Panel"]
layout_mode = 0
offset_left = -218.0
offset_right = -115.0
offset_bottom = 23.0
text = "Tempo Atual:"

[node name="BestTimeLabel" type="Label" parent="GameOver Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 1.0
offset_right = 235.0
offset_bottom = 24.0
text = "Melhor Tempo: 00:00"
horizontal_alignment = 1

[node name="Die" type="Label" parent="GameOver Panel"]
layout_mode = 0
offset_left = -53.0
offset_top = -158.0
offset_right = 55.0
offset_bottom = -135.0
text = "VocÃª Morreu!!"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h2yge")
volume_db = -20.0
autoplay = true
